[package]
name = "sat-nexus"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[workspace]
members = [
    "lib/_test_utils",
    "lib/ffi-utils",
    "lib/ipasir-sys",
    "lib/minisat-sys",
    "lib/cadical-sys",
    "lib/kissat-sys",
    "lib/cli",
    "lib/expr-parser",
    "lib/simple-sat",
    "lib/espresso-sys",
    "examples/partition",
    "examples/backdoor",
]

[dependencies]
sat-nexus-core = { path = "lib/core" }
sat-nexus-wrappers = { path = "lib/wrappers" }
ipasir = { path = "lib/ipasir" }
cadical = { path = "lib/cadical" }
minisat = { path = "lib/minisat", features = ["dynamic"] }
kissat = { path = "lib/kissat" }

[dev-dependencies]
sat-nexus-test-utils = { path = "lib/_test_utils" }
ffi-utils = { path = "lib/ffi-utils" }
cadical-sys = { path = "lib/cadical-sys", features = ["dynamic", "static"] }
minisat-sys = { path = "lib/minisat-sys", features = ["dynamic", "static"] }
kissat-sys = { path = "lib/kissat-sys", features = ["dynamic", "static"] }
minisat = { path = "lib/minisat", features = ["dynamic", "static"] }
color-eyre = "0.6"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
itertools = "0.10"
ndarray = "0.15.4"
criterion = "0.3.5"
once_cell = "1.13.0"

[[bench]]
name = "my_benchmark"
harness = false
