[package]
name = "backdoor"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4.20"
rand = "0.8.5"
itertools = "0.12.0"

simple-sat = { path = "../../lib/simple-sat" }
pyo3-example = { path = "../pyo3-example" }

clap = { version = "4.4.8", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.10.0"
