[package]
name = "partition"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4"
simplelog = "0.12"
itertools = "0.11"
rayon = "1.8"

sat-nexus-core = { path = "../../lib/core" }
sat-nexus-wrappers = { path = "../../lib/wrappers" }

clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
thread_local = "1.1.7"
fragile = "2.0.0"
csv = "1.2.2"
serde = "1.0.188"

[[bin]]
name = "solve-interval"
