[package]
name = "partition"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
log = "0.4"
simplelog = "0.12"
itertools = "0.13"
rayon = "1.10"

sat-nexus-core = { path = "../../lib/core" }
sat-nexus-wrappers = { path = "../../lib/wrappers", features = ["cadical-static", "kissat-static"] }

clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
thread_local = "1.1"
fragile = "2.0.0"
csv = "1.3"
serde = "1.0"
