[package]
name = "sat-nexus-cli"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
sat-nexus-core = { path = "../core" }
sat-nexus-wrappers = { path = "../wrappers" }
clap = { version = "3.1", features = ["derive"] }
color-eyre = "0.6"
itertools = "0.10"
dimacs = "0.2.0"
elapsed = "0.1.2"
log = "0.4"
simplelog = "0.12"
tynm = "0.1.6"
