[package]
name = "sat-nexus-core"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15.4"
type-map = "0.5.0"
derive_more = "0.99.16"
itertools = "0.10"
tap = "1.0.1"
once_cell = "1.8.0"
tynm = "0.1.6"
dimacs = "0.2.0"
log = "0.4"
easy-ext = "1.0.0"
snafu = "0.7"
expr-parser = { path = "../expr-parser" }
eyre = "0.6.8"

[dev-dependencies]
color-eyre = "0.6"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
test-log = "0.2.10"
env_logger = "0.9"
