[package]
name = "sat-nexus-core"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
ndarray = "0.15"
type-map = "0.5"
derive_more = "0.99"
itertools = "0.13"
tap = "1.0.1"
once_cell = "1.19"
tynm = "0.1"
dimacs = "0.2"
log = "0.4"
easy-ext = "1.0"
snafu = "0.7"
expr-parser = { path = "../expr-parser" }
eyre = "0.6"

[dev-dependencies]
color-eyre = "0.6"
quickcheck = "1.0"
quickcheck_macros = "1.0"
test-log = "0.2"
env_logger = "0.11"
