[package]
name = "expr-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.7"
pest_derive = "2.7"
pom = "3.2.0"
log = "0.4.17"
itertools = "0.10"
once_cell = "1.13.0"
simplelog = "0.12.0"

[dev-dependencies]
test-log = "0.2.10"
env_logger = "0.9.0"
