[package]
name = "minisat-sys"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[features]
default = []
dynamic = ["libloading", "once_cell"]
static = ["cc"]

[dependencies]
libloading = { version = "0.8.0", optional = true }
once_cell = { version = "1.8.0", optional = true }

[build-dependencies]
build_script = "0.2.0"
bindgen = "0.65.1"
cc = { version = "1.0", features = ["parallel"], optional = true }
