[package]
name = "minisat"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[features]
default = []
dynamic = ["minisat-sys/dynamic"]
static = ["minisat-sys/static"]

[dependencies]
minisat-sys = { path = "../minisat-sys", optional = true }
itertools = "0.13"

[dev-dependencies]
color-eyre = "0.6"
