[package]
name = "partition"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
simplelog = "0.12"
itertools = "0.11"
rayon = "1.8"

sat-nexus-core = { path = "../core" }
sat-nexus-wrappers = { path = "../wrappers" }

clap = { version = "4.4", features = ["derive"] }
color-eyre = "0.6"
ordered-float = "4.1.0"
thread_local = "1.1.7"
fragile = "2.0.0"
csv = "1.2.2"
serde = "1.0.188"

[[bin]]
name = "solve-interval"
