[package]
name = "pydical"
version = "0.2.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[lib]
name = "pydical"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
cadical = { path = "../cadical", features = ["static"] }
