[package]
name = "pydical"
version = "0.3.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
cadical = { path = "../cadical", features = ["static"] }

[dependencies.pyo3]
version = "0.23"
features = ["extension-module", "abi3", "abi3-py37"]
