[package]
name = "simple-sat"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
tracing = { version = "0.1", features = ["log"] }
itertools = "0.13"
rand = "0.8"
tap = "1.0"
vec_map = "0.8"
flate2 = "1.0"

clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
num-format = "0.4"
color-eyre = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.8"
serde_json = "1.0"

[dev-dependencies]
color-eyre = "0.6"
glob = "0.3"
tabled = "0.15"
test-log = "0.2"
