[package]
name = "wrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
cadical = {path = "../cadical"}
ipasir = {path = "../ipasir"}
snafu = "0.6.10"
itertools = "0.10.0"

[dev-dependencies]
color-eyre = "0.5.11"
ndarray = "0.15.3"
