[package]
name = "sat-nexus-wrappers"
version = "0.1.0"
authors = ["Konstantin Chukharev <lipen00@gmail.com>"]
edition = "2021"

[dependencies]
sat-nexus-core = { path = "../core" }
ipasir = { path = "../ipasir" }
cadical = { path = "../cadical", features = ["dynamic"] }
minisat = { path = "../minisat", features = ["dynamic"] }
kissat = { path = "../kissat" }
simple-sat = { path = "../simple-sat" }
itertools = "0.13"
strum = { version = "0.26", features = ["derive"] }
tynm = "0.1"
tap = "1.0"

[dev-dependencies]
color-eyre = "0.6"
ndarray = "0.16"
